--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spotify - Web Player: Music for everyone</title>
-        <link rel="stylesheet" href="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Styles/style.css">
-        <link rel="stylesheet" href="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Styles/utility.css">
-        <link rel="stylesheet" href="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Styles/media.css">
+        <link rel="stylesheet" href="Styles/style.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Styles/utility.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Styles/media.css">
         <link rel="icon"
             href="https://open.spotifycdn.com/cdn/images/favicon.0f31d2ea.ico">
         <link
@@ -18,13 +18,13 @@
         <div class="container">
             <div class="navbar flex">
                 <div class="logo_bar flex">
-                    <div class="firstlogo"><img class="invert" src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Assets/SVG/logo.svg"
+                    <div class="firstlogo"><img class="invert" src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/logo.svg"
                             alt="Spotify Logo"></div>
-                    <div class="home"><img class="invert" src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Assets/SVG/home.svg"
+                    <div class="home"><img class="invert" src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/home.svg"
                             alt="Home"></div>
-                    <div class="library_icon"><img id="library_svg" class="invert" src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Assets/SVG/library.svg"
+                    <div class="library_icon"><img id="library_svg" class="invert" src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/library.svg"
                             alt="library icon"></div>
-                    <div class="Secondlogo"><img class="invert" src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Assets/SVG/logo.svg"
+                    <div class="Secondlogo"><img class="invert" src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/logo.svg"
                             alt="Spotify Logo"></div>
                 </div>
                 <div class="search_bar flex" id="searchBar">
@@ -1471,7 +1471,7 @@
 
         </div>
 
-        <script src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Scripts/script.js"></script>
+        <script src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Scripts/script.js"></script>
     </body>
 
 </html>
