--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spotify - Web Player: Music for everyone</title>
         <link rel="stylesheet" href="Styles/style.css">
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Styles/utility.css">
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Styles/media.css">
+        <link rel="stylesheet" href="Styles/utility.css">
+        <link rel="stylesheet" href="Styles/media.css">
         <link rel="icon"
             href="https://open.spotifycdn.com/cdn/images/favicon.0f31d2ea.ico">
         <link
@@ -1471,7 +1471,8 @@
 
         </div>
 
-        <script src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Scripts/script.js"></script>
+        <script src="Scripts/script.js"></script>
     </body>
 
 </html>
+
