--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/play.svg"
                                             alt="play button icon">
                                     </div>
-                                    <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Ali%20Jee%20Profile%20Pic.jpeg"
+                                    <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Ali%20Jee%20Profile%20pic.jpeg"
                                         alt>
                                     <h4>Ali Jee</h4>
                                     <p>Artist</p>
@@ -816,7 +816,7 @@
                                     <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/play.svg"
                                         alt="play button icon">
                                 </div>
-                                <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Ali%20Jee%20Profile%20Pic.jpeg"
+                                <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Ali%20Jee%20Profile%20pic.jpeg"
                                     alt>
                                 <h4>Ali Jee</h4>
                                 <p>Artist</p>
@@ -1475,3 +1475,4 @@
     </body>
 
 </html>
+
