--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                                     <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/play.svg"
                                         alt="play button icon">
                                 </div>
-                                <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Zaman%20Tumhara%20Ya%20Hussain.jpg"
+                                <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Zamana%20Tumhara%20Ya%20Hussain.jpg"
                                     alt>
                                 <h4>Zamana Tumhara Ya Hussain</h4>
                                 <p>2025 • Nadeem Sarwar</p>
@@ -1230,7 +1230,7 @@
                                     <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/SVG/play.svg"
                                         alt="play button icon">
                                 </div>
-                                <img src="https://github.com/Muntazir-43/Spotify-Clone/blob/main/Asset/pics/Best%20Nohay.jpeg"
+                                <img src="https://raw.githubusercontent.com/Muntazir-43/Spotify-Clone/main/Assets/pics/Best%20Nohay.jpeg"
                                     alt>
                                 <h4>Best Nohay</h4>
                                 <p>By Muntazir Mehdi</p>
@@ -1475,4 +1475,3 @@
     </body>
 
 </html>
-
