This is the Index.html file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="Styles/style.css">
         <link rel="stylesheet" href="Styles/utility.css">
         <link rel="stylesheet" href="Styles/media.css">
-        <link rel="icon"
-            href="https://open.spotifycdn.com/cdn/images/favicon.0f31d2ea.ico">
+        <link rel="icon" href="https://open.spotifycdn.com/cdn/images/favicon.0f31d2ea.ico">
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;&display=swap"
             rel="stylesheet">
@@ -1475,4 +1474,5 @@
     </body>
 
 </html>
+
 
